--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "ttskch/google-sheets-api-php-client": "@dev",
+        "symfony/http-foundation": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7 || ^6.0",
