--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.6.0",
         "ttskch/google-sheets-api-php-client": "@dev",
-        "symfony/http-foundation": "^3.3"
+        "symfony/http-foundation": "^3.4|^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7 || ^6.0",
